edition, typos, new figures :)

--- a/modeling/modeling.tex
+++ b/modeling/modeling.tex
@@ -9,7 +9,7 @@
 \begin{document}
 \input{./sections/abstract}
 \maketitle
-\tableofcontents
+%\tableofcontents
 \input{./sections/guide}
 \input{./sections/background}
 \input{./sections/formulation}
