--- a/modeling/preambule/rmbdarticle.sty
+++ b/modeling/preambule/rmbdarticle.sty
@@ -54,7 +54,7 @@
 \RequirePackage{cleveref} % autoref replacement (load at last)
 
 %%% table of contents
-\setcounter{tocdepth}{1} % where n is the level (1 for sections only)
+%\setcounter{tocdepth}{1} % where n is the level (1 for sections only)
 
 %%% siunitx setup
 \sisetup{
@@ -115,7 +115,7 @@ input-symbols = \pi\tau
 \newenvironment{verification}{\small\noindent{\it Verification.}}{\normalsize}
 
 %%% Equations
-\numberwithin{equation}{section} % equation with section numbers
+%\numberwithin{equation}{section} % equation with section numbers
 
 %%% Tables
 %
