--- a/modeling/sections/background.tex
+++ b/modeling/sections/background.tex
@@ -1,5 +1,27 @@
-\section{Description}
-[In this section, we set the description of a physical phenomenon: the motion of a gravitational pendulum. We focus on answer the questions: what is a pendulum? what is a gravitational pendulum? How the pendulum is set into motion? What keeps the pendulum moving? What forces act on the pendulum that damp its motion?]
+%%% LATEX vars used in the following
+\newcommand{\angpos}{\theta}     % angular position
+\newcommand{\angvel}{\dt\theta}  % angular velocity
+\newcommand{\angacc}{\ddt\theta} % angular acceleration
+\newcommand{\torque}{\tau}       % torque
+\newcommand{\fcoeff}{\alpha}     % friction coefficient
+\newcommand{\oscper}{\tau}       % oscillation period
+\newcommand{\natfreq}{\omega}    % natural frequency
+\newcommand{\cycfreq}{f}         % cyclical frequency
+%
+\newcommand{\lvel}{v} % linear velocity
+\newcommand{\lacc}{a} % linear acceleration
+%
+\newcommand{\height}{h} % height
+
+
+\section{Background}
+In this section, we set the description of a physical phenomenon: the motion of a gravitational pendulum. We focus on answer the questions: what is a pendulum? what is a gravitational pendulum? How the pendulum is set into motion? What keeps the pendulum moving? What forces act on the pendulum that damp its motion? We also provide a bit of some historical information about it.
+
+
+\subsection{Description}
+A \lingo{pendulum} is a mechanical system consisting of a bob hanging by a rod attached to a pivot.  A \lingo{gravitational pendulum} is a pendulum object only to gravitational interactions. Finally, a \lingo{simple gravitational pendulum} is a gravitational pendulum consisting of a massive bob hanging by a massless rod attached to a frictionless pivot. \Cref{fig:simplegravpendulum} depics a simple pendulum. 
+
+For all the pendulums, at any time $t$, the angle made by the rod with respect to the vertical, the pendulum equilibrium position, is called the \lingo{pendulum amplitude}, $\angpos$. The \lingo{pendulum trajectory}, $\angpos\vat t$, is found by joining the different $\angpos$ at their corresponding $t$. Lastly, the \lingo{pendulum angular velocity}, $\angvel$, can be calculated as the time derivative of $\angpos$.
 %
 % ------------------------------------------------------------- Figure
 % position: bthH. size:width=0.5\textwidth. file:location+filename
@@ -9,16 +31,21 @@
    {fig:simplegravpendulum}%
 % ------------------------------------------------------------- EndFigure
 
-A pendulum is a mechanical system consisting of a bob hanging by a rod attached, in turn, to a pivot, see \cref{fig:simplegravpendulum}. A gravitational pendulum is a pendulum object only to gravitational interactions. 
-
-There are basically three ways of setting a gravitational pendulum into motion:
+Returning to the physical description, a gravitational pendulum is set into motion by:
 \begin{enumerate}
-\item by moving the bob from its equilibrium position to an initial angle, $\theta_0$, at time $t = 0$;
-\item by applying a force that imprints an angular velocity to the bob, $\dt\theta_0$, at time $t = 0$;
-\item or by both at the same time $t = 0$.
+\item moving the bob from its equilibrium position to an initial amplitude, $\angpos_0$, at an initial time;
+\item applying a force that imprints an angular velocity to the bob at an initial time, $\angvel_0$, or
+\item both at the same initial time.
 \end{enumerate}
 
-Once the pendulum is swinging, an interplay between kinetic energy and gravitational potential energy keeps the system in motion. Kinetic energy initiates motion by the initial displacement or initial forces that perturbed the system from its equilibrium position, while the gravitational potential tries to restore the bob to its equilibrium position. This interplay will continue indefinitely, unless damping forces, eventually, stop the pendulum from moving. Friction on the pivot or drag -- if the pendulum is partially or totally submerged in a viscous fluid -- are examples of damping forces.
+Once motion starts, the system acquires \lingo{kinetic energy}, $\ken$, that is then balanced by \lingo{gravitational potential energy}, $\pen$. This restoring energy causes the system to oscillate about the equilibrium position, swinging back and forth. The time for one complete cycle, a left swing and a right swing, is called the \lingo{pendulum period}, $\oscper$. The interplay between both energies continues indefinitely, unless an external force, such as a \lingo{damping force}, stops the pendulum from moving. Friction at the pivot or fluid drag, provided a partial or total pendulum submersion in a viscous fluid, are examples of damping forces. Finally, buoyancy is another force that comes into play by effectively reducing the bob weight.
 
-\section{Objective}
-To seek for a mathematical relation, perhaps in a closed form, to predict the pendulum amplitude variation with time; \ie, deduce a function of the form $\theta\vat t$. 
+A bit of history. Galileo Galilei studied pendulums \ca 1600. He discovered that the pendulum periods are \lingo{isochronos}; \ie, the period is independent of the initial amplitude. Then, by further studies, Christiaan Huygens proposed that the pendulum period depends on the square of its length. More precisely, he found that
+\begin{equation}\label{eq:huygenslawfortheperiod}
+\oscper = 2\pi\sqrt{\dfrac{\length}{\grav}}\,,
+\end{equation}
+where $\length$ is the rod length and $\grav$ the free fall acceleration. This equation is known as \lingo{Huygens' law for the period}. See, finally, that Huygens' law is consistent with the Galilei's isochronos result.
+
+
+\subsection{Objective}
+The aim herein is to find a closed form of a mathematical function to predict the trajectory of a gravitational pendulum. A closed form may perhaps not be found when modeling a real gravitational pendulum, thus restrictions based on sound physical arguments would need be made.
